--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,2 +1,15 @@
 <!-- bootstrap 4.5 -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+<!-- NES.css -->
+<link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<style>
+    body{
+        background:#f5f5f5;
+        font-family:'Press Start 2P', cursive; 
+    }
+    .comment-list{
+        color: #92CC41;
+    }
+    .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+</style>
