continuing work on routes aand adding form elements to pages

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -8,8 +8,20 @@
         background:#f5f5f5;
         font-family:'Press Start 2P', cursive; 
     }
+    p {
+/* font-size: medium; */
+    }
+
     .comment-list{
         color: #92CC41;
+        font-size: small;
+    }
+    .text-small{
+        font-size: small;
     }
     .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+    .textarea_field{
+        font-size: small;
+    }
 </style>
