--- a/templates/threadList.html
+++ b/templates/threadList.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ExpressForum - All Threads</title>
     ${head}
-    <style>       
-      body{background:#f5f5f5}
-    .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+    <style>
+
     </style>
 </head>
+
 <body>
-    <h1 class= "text-center">All The Threads!</h1>
+    <h1 class="text-center">All The Threads!</h1>
     <!-- <a href="/threads">View A list of threads</a> -->
-   <main class = "container"> 
-    <div class="my-3 p-3 bg-white rounded box-shadow">
-    <div class = "list-group">
-        ${threads.map((thread) => {
-            return  `<a href= "/threads/${thread.id}" class = "list-group-item">${thread.title}</a>`
-         }).join('')}
-        </div> 
+    <main class="container">
+        <!-- <div class="my-3 p-3 bg-white rounded box-shadow"> -->
+        <div class="nes-container is-dark with-title">
+            <p class="title">Threads.all</p>
+
+            <div class="list-group">
+                ${threads.map((thread) => {
+                return `<a href="/threads/${thread.id}" class="list-group-item">${thread.title}</a>`
+                }).join('')}
+            </div>
         </div>
+
+        </br>
+
+        <!-- Add a new Thread -->
+        <div class="nes-container is-dark with-title">
+            <p class="title">Thread.new</p>
+
+            <form action="/threads" method="POST">
+                <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
+                    <label for="dark_field" style="color:#fff;">Your Name</label>
+                    <input type="text" id="dark_field" class="nes-input is-dark" name="name">
+                  </div>
+                <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
+                    <label for="dark_field" style="color:#fff;">Thread Title</label>
+                    <input type="text" id="dark_field" class="nes-input is-dark" name="title">
+                  </div>  
+                <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
+                    <label for="textarea_field text-small">Post a New Thread</label>
+                    <textarea id="newThreadText" class="nes-textarea is-dark" name="content"></textarea>
+                    <!-- <input type="text" id="dark_field" class="nes-input is-dark" placeholder="...leave a comment"> -->
+                    </br>
+
+                </div>
+                <button id="sumbitThread" type="submit" class="nes-btn from-left ">Submit</button>
+            </form>
+        </div>
+
     </main>
-      
+
 </body>
+
 </html>
