full forum functionality

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -11,6 +11,9 @@
     p {
 /* font-size: medium; */
     }
+    .greenText {
+        color: #92CC41;
+    }
 
     .comment-list{
         color: #92CC41;
