--- a/templates/threadList.html
+++ b/templates/threadList.html
@@ -44,7 +44,6 @@
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
                     <label for="textarea_field text-small">Post a New Thread</label>
                     <textarea id="newThreadText" class="nes-textarea is-dark" name="content"></textarea>
-                    <!-- <input type="text" id="dark_field" class="nes-input is-dark" placeholder="...leave a comment"> -->
                     </br>
 
                 </div>
@@ -54,6 +53,11 @@
 
     </main>
 
+<!-- <script>
+    document.getElementById("submitThread").addEventListener("click", function(event){
+  event.preventDefault()
+});
+</script> -->
 </body>
 
 </html>
