--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -5,14 +5,28 @@
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
     body{
-        background:#f5f5f5;
+        background: #212529;
         font-family:'Press Start 2P', cursive; 
     }
-
+    h1 {
+        color: #20a0f8;
+    }
+    .allThreads{
+        background: #212529;
+    }
     .greenText {
         color: #92CC41;
     }
 
+    .yellowText {
+        color: #E8D887;
+    }
+    .list-group-item {
+        background-color: #212529;
+    }
+    .list-group {
+        background-color: #92CC41;
+    }
     .comment-list{
         color: #92CC41;
         font-size: small;
@@ -21,7 +35,9 @@
         font-size: small;
     }
     .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-
+#allThreads {
+    color:#212529;
+}
     .textarea_field{
         font-size: small;
     }
