added dynamic error page, preliminary error routes

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -3,6 +3,8 @@
 <!-- NES.css -->
 <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<!-- My CSS -->
+<!-- <link rel="stylesheet" href="./style.css"> -->
 <style>
     body{
         background: #212529;
@@ -10,6 +12,9 @@
     }
     h1 {
         color: #20a0f8;
+    }
+    h3, .redText{
+        color: #f87068;
     }
     .allThreads{
         background: #212529;
