--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ExpressForum</title>
     ${head}
-</head>
-<body>
-    <h1>Welcome!</h1>
-    <a href="/threads">View A list of threads</a>
-</body>
+  </head>
+  <body>
+    <div class="nes-container is-rounded is-centered is-dark with-title">
+      <p class="title">Expressly Express 1.0</p>
+      <h1>Welcome to the Forum!</h1>
+      <!-- <div class="d-flex justify-content-around"> -->
+        <a class="nes-btn" href="/threads">Login</a>
+      <!-- </div> -->
+    </div>
+    <div class="d-flex justify-content-around">
+
+        <a href="/threads">View A list of threads</a>
+    </div>
+  </body>
 </html>
