--- a/templates/thread.html
+++ b/templates/thread.html
@@ -38,7 +38,10 @@
                 </br>
 
             </div>
-            <button id="submitComment" type="submit" class="nes-btn from-left ">Comment</button>
+            <div class ="d-flex justify-content-around">
+                <button id="submitComment" type="submit" class="nes-btn from-left ">Comment</button>
+            
+            </div>
         </form>
 
       </div>
