--- a/templates/threadList.html
+++ b/templates/threadList.html
@@ -36,15 +36,15 @@
             <form action="/threads" method="POST">
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
                     <label for="dark_field" style="color:#fff;">Your Name</label>
-                    <input type="text" id="dark_field" class="nes-input is-dark" name="name">
+                    <input type="text" id="dark_field" class="nes-input is-dark" name="name" required>
                   </div>
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
                     <label for="dark_field" style="color:#fff;">Thread Title</label>
-                    <input type="text" id="dark_field" class="nes-input is-dark" name="title">
+                    <input type="text" id="dark_field" class="nes-input is-dark" name="title" required>
                   </div>  
                 <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
                     <label for="textarea_field text-small">Post a New Thread</label>
-                    <textarea id="newThreadText" class="nes-textarea is-dark" name="content"></textarea>
+                    <textarea id="newThreadText" class="nes-textarea is-dark" name="content" required></textarea>
                     </br>
 
                 </div>
