--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,10 @@
     ${head}
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+      </div>
+      <div class = "row mx-auto">
     <div class="nes-container is-rounded is-centered is-dark with-title">
       <p class="title">Expressly Express 1.0</p>
       <h1>Welcome to the Forum!</h1>
@@ -14,9 +18,13 @@
         <a class="nes-btn" href="/threads">Login</a>
       <!-- </div> -->
     </div>
-    <div class="d-flex justify-content-around">
+  </div>
 
+ 
+    <div class="d-flex justify-content-around">
         <a href="/threads">View A list of threads</a>
     </div>
+   
+  </div>
   </body>
 </html>
