--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -35,6 +35,12 @@
     .comment-list{
         color: #92CC41;
         font-size: small;
+      
+        
+    }
+    .comment {
+        border : 1px solid #fff;
+        border-radius: 0.5rem;
     }
     .text-small{
         font-size: small;
