--- a/templates/thread.html
+++ b/templates/thread.html
@@ -10,30 +10,38 @@
     <h1 class= "text-center">An Expressly Express Forum</h1>
 
    <main class = "container"> 
-    <!-- <div class="my-3 p-3 bg-white rounded box-shadow"> -->
+    <!-- <div class="my-3 p-3  rounded box-shadow"> -->
     <div class="nes-container is-dark with-title">
         <p class="title"><span class="greenText">${thread.name}</span>.${thread.title}</p>
         <!-- <div class = "list-group"> -->
     
-    <!-- <h3>${thread.title}</h3> -->
+   
     <p>${thread.content}</p>
         </br>
+
+<div class="nes-container is-dark with-title">
+    <p class="title">comments</p>
     <div class = "lists is-dark">
     <ul class = "nes-list is-dark is-disc comment-list">
         ${thread.comments.map((comment) => {
-           return  `<li>${comment.name} - "${comment.content}"</li>`
+           return  `<li class="comment p-2">${comment.name} - "${comment.content}"</li>`
         }).join('')}
     </ul>
     </div>
-   
+</div>
+   </div>
+</br>
+
+<div class="nes-container is-dark with-title">
+    <p class="title"><span class="greenText">${thread.title}</span>.comments</p>
         <form action="/threads/${thread.id}/comments" method="POST">
-            <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
+            <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
                 <label for="dark_field" style="color:#fff;">Your Name</label>
-                <input type="text" id="dark_field" class="nes-input is-dark" name="name" required>
+                <input type="text" id="dark_field" class="nes-input is-dark" name="name">
               </div>
             <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
                 <label for="textarea_field text-small">leave a comment</label>
-                <textarea id="newThreadText" class="nes-textarea is-dark" name="content" required></textarea>
+                <textarea id="newThreadText" class="nes-textarea is-dark" name="content"></textarea>
                
                 </br>
 
