--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,55 +1,66 @@
 <!-- bootstrap 4.5 -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+/>
 <!-- NES.css -->
 <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+  rel="stylesheet"
+/>
 <!-- My CSS -->
 <!-- <link rel="stylesheet" href="./style.css"> -->
 <style>
-    body{
-        background: #212529;
-        font-family:'Press Start 2P', cursive; 
-    }
-    h1 {
-        color: #20a0f8;
-    }
-    h3, .redText{
-        color: #f87068;
-    }
-    .allThreads{
-        background: #212529;
-    }
-    .greenText {
-        color: #92CC41;
-    }
+  body {
+    background: #212529;
+    font-family: "Press Start 2P", cursive;
+  }
+  h1 {
+    color: #20a0f8;
+  }
+  h3,
+  .redText {
+    color: #f87068;
+  }
+  .allThreads {
+    background: #212529;
+  }
+  .greenText {
+    color: #92cc41;
+  }
 
-    .yellowText {
-        color: #E8D887;
-    }
-    .list-group-item {
-        background-color: #212529;
-    }
-    .list-group {
-        background-color: #92CC41;
-    }
-    .comment-list{
-        color: #92CC41;
-        font-size: small;
-      
-        
-    }
-    .comment {
-        border : 1px solid #fff;
-        border-radius: 0.5rem;
-    }
-    .text-small{
-        font-size: small;
-    }
-    .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-#allThreads {
-    color:#212529;
-}
-    .textarea_field{
-        font-size: small;
-    }
- </style>
+  .yellowText {
+    color: #e8d887;
+  }
+  .list-group-item {
+    background-color: #212529;
+  }
+  .list-group {
+    background-color: #92cc41;
+  }
+  .comment-list {
+    color: #92cc41;
+    font-size: small;
+  }
+  .comment {
+    border: 1px solid #fff;
+    border-radius: 0.25rem;
+  }
+  .text-small {
+    font-size: small;
+  }
+
+  .box-shadow {
+    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+  }
+  #commentContainer {
+    border-width: 2px;
+  }
+  #allThreads {
+    color: #212529;
+  }
+  .textarea_field {
+    font-size: small;
+  }
+</style>
