added .map in threadList.html

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -37,7 +37,11 @@
     background-color: #212529;
   }
   .list-group {
-    background-color: #92cc41;
+    /* background-color: #92cc41; */
+  }
+  .listComments {
+      color: #fff;
+      font-size: small;
   }
   .comment-list {
     color: #92cc41;
