--- a/templates/thread.html
+++ b/templates/thread.html
@@ -33,7 +33,7 @@
 </br>
 
 <div class="nes-container is-dark with-title">
-    <p class="title"><span class="yellowText">${thread.title}</span>.comments</p>
+    <p class="title"><span class="yellowText">${thread.title}</span>.addComment</p>
         <form action="/threads/${thread.id}/comments" method="POST">
             <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline">
                 <label for="dark_field" style="color:#fff;">Your Name</label>
