--- a/templates/thread.html
+++ b/templates/thread.html
@@ -18,6 +18,7 @@
    
     <p>${thread.content}</p>
         </br>
+        <!-- <div><span id="numLikes">${thread.likes} </span><i class="nes-icon is-small heart"></i> </div> -->
 
 <div id = "commentContainer" class="nes-container is-dark with-title">
     <p class="title">comments</p>
@@ -48,6 +49,7 @@
             </div>
             <div class ="d-flex justify-content-around">
                 <button id="submitComment" type="submit" class="nes-btn from-left ">Comment</button>
+                <button id="likeBtn" type="submit" class="nes-btn from-left ">Like</button>
             
             </div>
         </form>
@@ -59,6 +61,7 @@
 
 </div>
  </main>
+ 
 </body>
 </html>
 
