working on dynamic update of likes on ththread detail page

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -37,7 +37,7 @@
     background-color: #212529;
   }
   .list-group {
-    background-color: #92cc41;
+    /* background-color: #92cc41; */
   }
   .comment-list {
     color: #92cc41;
@@ -64,3 +64,7 @@
     font-size: small;
   }
 </style>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+   
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
