--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -12,6 +12,30 @@
 <!-- My CSS -->
 <!-- <link rel="stylesheet" href="./style.css"> -->
 <style>
+    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+    .row.content {height: 60vh}
+    
+    /* Set gray background color and 100% height */
+    .sidenav {
+      background-color: #212529;
+      height: 100%;
+    }
+    
+    /* Set black background color, white text and some padding */
+    footer {
+      background-color: #555;
+      color: white;
+      padding: 15px;
+    }
+    
+    /* On small screens, set height to 'auto' for sidenav and grid */
+    @media screen and (max-width: 767px) {
+      .sidenav {
+        height: auto;
+        padding: 15px;
+      }
+      .row.content {height: auto;} 
+    }
   body {
     background: #212529;
     font-family: "Press Start 2P", cursive;
