added jQuery to head.html

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -89,6 +89,8 @@
   }
 </style>
 
+
+<!-- Javascript goes Here -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
