added truncated  message preview to threadList and basic separation of threads in list

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -10,83 +10,9 @@
   rel="stylesheet"
 />
 <!-- My CSS -->
-<!-- <link rel="stylesheet" href="./style.css"> -->
+<link href="/css/style.css" rel="stylesheet" type="text/css">
 <style>
-    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 60vh}
-    
-    /* Set gray background color and 100% height */
-    .sidenav {
-      background-color: #212529;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height: auto;} 
-    }
-  body {
-    background: #212529;
-    font-family: "Press Start 2P", cursive;
-  }
-  h1 {
-    color: #20a0f8;
-  }
-  h3,
-  .redText {
-    color: #f87068;
-  }
-  .allThreads {
-    background: #212529;
-  }
-  .greenText {
-    color: #92cc41;
-  }
-
-  .yellowText {
-    color: #e8d887;
-  }
-  .list-group-item {
-    background-color: #212529;
-  }
-  .list-group {
-    /* background-color: #92cc41; */
-  }
-  .comment-list {
-    color: #92cc41;
-    font-size: small;
-  }
-  .comment {
-    border: 1px solid #fff;
-    border-radius: 0.25rem;
-  }
-  .text-small {
-    font-size: small;
-  }
-
-  .box-shadow {
-    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
-  }
-  #commentContainer {
-    border-width: 2px;
-  }
-  #allThreads {
-    color: #212529;
-  }
-  .textarea_field {
-    font-size: small;
-  }
+   
 </style>
 
 
