--- a/templates/thread.html
+++ b/templates/thread.html
@@ -18,10 +18,10 @@
             <!-- <div class = "list-group"> -->
 
 
-            <p>${thread.content}</p>
+            <p class="threadContent">${thread.content}</p>
             <div>
 
-        <div class="row d=flex justify-content-around" >
+        <div class="row d-flex justify-content-around" >
             <button id="likeBtn" threadId=${thread.id} type="submit" class="nes-btn from-left ml-auto">Like</button>
 
             <div class="yellowText is-large" id="counter">${thread.likes}</div> 
